@@ -7,6 +7,8 @@ noinst_LTLIBRARIES = libmpeg2.la libmpeg2arch.la
 libmpeg2_la_SOURCES = alloc.c header.c decode.c slice.c motion_comp.c idct.c
 libmpeg2_la_LIBADD = libmpeg2arch.la
 
+AM_CPPFLAGS = -I$(srcdir)/../include
+
 libmpeg2arch_la_SOURCES = motion_comp_mmx.c idct_mmx.c \
                           motion_comp_altivec.c idct_altivec.c \
                           motion_comp_alpha.c idct_alpha.c \
