@@ -71,6 +71,7 @@ xine-lib (1.1.90) (Unreleased)
 xine-lib (1.1.17) 2009-??-??
   * Enable libmpeg2new. This is not yet production code; the old mpeg2
     decoder remains the default.
+  * Add support for OpenBSD.
   * Fix a build failure on *BSD due to some rather useful GNUisms.
   * Protect audio loop so it cannot write to a paused device (fix
     pause/resume freeze with pulseaudio).
